Fix overflow #1

--- a/src/style/features-section.sass
+++ b/src/style/features-section.sass
@@ -9,7 +9,7 @@
   margin-top: 100px
   background-color: #FFD2D2
   box-shadow: 8px 8px 47px 0px rgba(66, 68, 90, 1)
-  overflow: visible
+  overflow-y: visible
 
 .features-container
   width: 100%
@@ -25,7 +25,7 @@
   display: flex
   justify-content: center
   align-items: flex-end
-  overflow: visible
+  overflow-y: visible
 
   img, .gatsby-image-wrapper
     transform: scale(1.15) translateY(-6.5%)
@@ -87,6 +87,7 @@
     height: auto  /* Allow height to adjust with aspect ratio */
     clip-path: polygon(50% -10%, 100% -10%, 100% 35%, 100% 100%, 80% 90%, 50% 100%, 20% 90%, -10% 100%, -10% 35%, -10% -10%)
     img, .gatsby-image-wrapper
+      max-height: 300px
       width: auto
       object-fit: cover  /* Ensure image fills the container without stretching */
 
